* restructuracion del informe

--- a/Informe/CasinoOnline.tex
+++ b/Informe/CasinoOnline.tex
@@ -196,33 +196,39 @@ Los usuario del casino online deberan tener conección a internet o acceso a una 
 Algunos de los supuestos que hemos adoptado es que por ahora se incluirán solo los dos juegos mencionados, tragamonedas y craps, y que las reglas de estos juegos no cambiarán.
 
 \newpage
-\section{Requerimientos específicos}
-\input{reqEspecificos.tex} 
-
-\newpage
 \section{Análisis por funcionalidad}
 \input{porfuncionalidad.tex}
 	
 \newpage
 \section{Glosario}
 
-\paragraph{Glosario de Terminologia de requeriminetos}
-\textbf{Craps: } Es cuando en los dados se obtiene por resultado un dos, un tres o un doce.\\
-\textbf{Natural: } Es cuando en los dados se obtiene por resultado un siete o un once\\
-\textbf{Puck: } Una luz en el tablero que indica si se ha establecido el Punto
-Punto, establecer: Es cuando en los dados se obtiene por resultado un cuatro, cinco, seis, ocho, nueve o diez.
+\vskip1cm
 
-\paragraph{Glosario de Terminologia de juegos del casino}
-\textbf{Actor: } Representa un tipo de usuario, un rol, abstrayendo al usuario real. Un actor es un agente.\\
-\textbf{Agente: } Es cualquier ente, sistema, persona que interacciona con nuestra maquina, o sistema de software.\\
-\textbf{Casos de Uso: } Describen bajo la forma de acciones y reacciones las operaciones provistas por una maquina desde el punto de vista del usuario, o sea, una secuencia de acciones que el sistema puede llevar a cabo interactuando con los actores. Estructuran el conjunto de operaciones según la categoría de usuarios que participan en el mismo.\\
-\textbf{Diagrama de Actividad: } Presenta un flujo de actividades que están conectadas por medio de flechas representando flujo de control.\\
-\textbf{FSM (Finite State Machines): } Las Maquinas de estado finito especifican aspectos relacionados con el tiempo real, dominios reactivos o autónomos, etc. Pueden representar aspectos dinámicos que no se expresan en otros diagramas.\\
-\textbf{Herencia: } Un subconjunto del modelo heredado, con características propias además de todas las heredadas.\\
-\textbf{Modelo Conceptual: } El objetivo es identificar y explicar los conceptos significativos en un dominio de problema y como estos se relacionan entre si.\\
-\textbf{OCL (Object Constraint Languaje): } Lenguaje que depende del modelo de clases conceptuales (o modelo conceptual), se lo utiliza para expresar mas formalmente las operaciones y restricciones, para definir que estados son válidos.\\
-\textbf{Validación: } Proceso cuyo objetivo es incrementar la confianza de que una descripción formal se corresponde con la realidad.\\
-\textbf{Verificación: } Proceso cuyo objetivo es garantizar que una descripción formal es correcta con respecto a otra (la del problema con la de la solución en este caso).
+\textsc{Glosario de Terminologia de juegos del casino}
+	
+\begin{itemize}
+	\item\textbf{Craps: } Es cuando en los dados se obtiene por resultado un dos, un tres o un doce.\\
+	\item\textbf{Natural: } Es cuando en los dados se obtiene por resultado un siete o un once\\
+	\item\textbf{Puck: } Una luz en el tablero que indica si se ha establecido el Punto
+Punto, establecer: Es cuando en los dados se obtiene por resultado un cuatro, cinco, seis, ocho, nueve o diez.
+\end{itemize}
+
+\vskip2cm
+
+\textsc{Glosario de Terminologia de requeriminetos}
+
+\begin{itemize}
+	\item\textbf{Actor: } Representa un tipo de usuario, un rol, abstrayendo al usuario real. Un actor es un agente.
+	\item\textbf{Agente: } Es cualquier ente, sistema, persona que interacciona con nuestra maquina, o sistema de software.
+	\item\textbf{Casos de Uso: } Describen bajo la forma de acciones y reacciones las operaciones provistas por una maquina desde el punto de vista del usuario, o sea, una secuencia de acciones que el sistema puede llevar a cabo interactuando con los actores. Estructuran el conjunto de operaciones según la categoría de usuarios que participan en el mismo.
+	\item\textbf{Diagrama de Actividad: } Presenta un flujo de actividades que están conectadas por medio de flechas representando flujo de control.
+	\item\textbf{FSM (Finite State Machines): } Las Maquinas de estado finito especifican aspectos relacionados con el tiempo real, dominios reactivos o autónomos, etc. Pueden representar aspectos dinámicos que no se expresan en otros diagramas.
+	\item\textbf{Herencia: } Un subconjunto del modelo heredado, con características propias además de todas las heredadas.
+	\item\textbf{Modelo Conceptual: } El objetivo es identificar y explicar los conceptos significativos en un dominio de problema y como estos se relacionan entre si.
+	\item\textbf{OCL (Object Constraint Languaje): } Lenguaje que depende del modelo de clases conceptuales (o modelo conceptual), se lo utiliza para expresar mas formalmente las operaciones y restricciones, para definir que estados son válidos.
+	\item\textbf{Validación: } Proceso cuyo objetivo es incrementar la confianza de que una descripción formal se corresponde con la realidad.
+	\item\textbf{Verificación: } Proceso cuyo objetivo es garantizar que una descripción formal es correcta con respecto a otra (la del problema con la de la solución en este caso).
+\end{itemize}
 
 \newpage
 \label{an1}
