* descomento las imagenes comentadas pues ya estan los fuentes

--- a/Informe/porfuncionalidad.tex
+++ b/Informe/porfuncionalidad.tex
@@ -467,12 +467,12 @@ Cada una de estas actividades se explican con mas detalle en los casos de uso: C
 \\
 {\large FSM: JugadaTragamonedas}
 \begin{center}
-%\includegraphics[scale=0.5]{img/JugadaTragamonedas.png}
+\includegraphics[scale=0.5]{img/JugadaTragamonedas.png}
 \end{center}
 
 {\large FSM: MaquinaTragamonedas}
 \begin{center}
-%\includegraphics[scale=0.5]{img/MaquinaTragamonedas.png}
+\includegraphics[scale=0.5]{img/MaquinaTragamonedas.png}
 \end{center}
 
 \textit{\textsl{Aclaraciones}}: 
@@ -590,7 +590,7 @@ CU \incr \ref{lincr}, CU \jcr \ref{ljcr}, CU \apcr \ref{lapcr} y CU \scr \ref{ls
 		
 	\end{cursoe}
 	
-%\paragraph{Comentario: }
+\paragraph{Comentario: }
 %\begin{flushleft}
 %\end{flushleft}
 \end{cu}
